--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,18 @@
 {
   "presets": [
     "react",
-    "es2015"
+    "es2015-loose",
+    "stage-0"
   ],
   "env": {
     "dev": {
       "presets": ["react-hmre"]
     }
   },
-  "plugins": ["transform-object-rest-spread"]
+  "plugins": [
+    "transform-object-rest-spread",
+    "transform-es5-property-mutators",
+    "transform-jscript",
+    "transform-es3-property-literals"
+  ]
 }
