--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
   "devDependencies": {
     "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
@@ -48,7 +47,7 @@
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.16.0",
     "images": "^3.0.0",
-    "npm-install-webpack-plugin": "^3.1.0",
+    "node-sass": "^3.5.3",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
