--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "html-webpack-plugin": "^2.16.0",
     "images": "^3.0.0",
     "node-sass": "^3.5.3",
+    "npm-install-webpack-plugin": "^4.0.4",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
