--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
+    "scp2": "^0.5.0",
     "style": "0.0.3"
   },
   "devDependencies": {
