--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "console-polyfill": "^0.2.2",
     "es3ify-loader": "^0.2.0",
+    "express": "^4.14.0",
     "font-awesome": "^4.6.1",
     "header": "^0.1.1",
     "imports": "^1.0.0",
@@ -42,22 +43,25 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
+    "colors": "^1.1.2",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "font-awesome-webpack": "0.0.4",
+    "ftps": "^0.4.7",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.16.0",
     "node-sass": "^3.5.3",
     "npm-install-webpack-plugin": "^4.0.4",
     "sass-loader": "^3.2.0",
+    "simple-ssh": "^0.9.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
+    "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1",
-    "webpack-merge": "^0.12.0",
-    "colors": "^1.1.2",
-    "ftps": "^0.4.7",
-    "simple-ssh": "^0.9.0"
+    "webpack-hot-middleware": "^2.12.2",
+    "webpack-isomorphic-tools": "^2.5.7",
+    "webpack-merge": "^0.12.0"
   }
 }
