--- a/package.json
+++ b/package.json
@@ -7,11 +7,27 @@
   "scripts": {
     "dev": "webpack-dev-server",
     "dev-ie8": "webpack-dev-server",
-    "server-dev": "NODE_ENV=development node src/server/index.js",
+    "server-dev": "better-npm-run server-dev",
     "build": "webpack",
     "build-server": "webpack -p --config=webpack.server.config.js",
     "production": "webpack -p",
-    "server": "NODE_ENV=production node src/server/index.js"
+    "server": "better-npm-run server"
+  },
+  "betterScripts": {
+    "server-dev": {
+      "command": "node src/server/index.js",
+      "env": {
+        "NODE_ENV": "development",
+        "SERVER_PORT": 3002
+      }
+    },
+    "server": {
+      "command": "node src/server/index.js",
+      "env": {
+        "NODE_ENV": "production",
+        "SERVER_PORT": 3002
+      }
+    }
   },
   "dependencies": {
     "babel-plugin-transform-es3-property-literals": "^6.8.0",
@@ -47,6 +63,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
+    "better-npm-run": "0.0.10",
     "colors": "^1.1.2",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
