--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-webpack-project",
-  "version": "1.0.0",
-  "description": "react-webpack project",
-  "author": "alan",
+  "name": "react-webpack-isomorphic-boilerplate",
+  "version": "0.0.3",
+  "description": "react-webpack-isomorphic project",
+  "author": "Zhangjd",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server",
@@ -37,6 +37,7 @@
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-stage-0": "^6.5.0",
     "console-polyfill": "^0.2.2",
+    "core-js": "^2.4.1",
     "es3ify-loader": "^0.2.0",
     "express": "^4.14.0",
     "font-awesome": "^4.6.1",
